--- a/index.html
+++ b/index.html
@@ -1,1 +1,77 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Perfume de Cuerda y Fuego</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Roboto Slab', serif;
+            line-height: 1.8;
+            background-color: #f4f4f4;
+            color: #333;
+            padding: 20px;
+        }
+        h1 {
+            text-align: center;
+            color: #5a5a5a;
+        }
+        .décima {
+            margin: 20px 0;
+            padding: 10px;
+            background: #ffffff;
+            border-left: 4px solid #ffcc00;
+            box-shadow: 2px 2px 5px rgba(0,0,0,0.1);
+        }
+        .highlight-1 { background-color: #807EBF; padding: 2px 4px; border-radius: 3px; }
+        .highlight-2 { background-color: #9C9AD9; padding: 2px 4px; border-radius: 3px; }
+        .highlight-3 { background-color: #8C6D11; padding: 2px 4px; border-radius: 3px; }
+        .highlight-4 { background-color: #F2CBBD; padding: 2px 4px; border-radius: 3px; }
+        .highlight-5 { background-color: #262626; padding: 2px 4px; color: #fff; border-radius: 3px; }
+    </style>
+</head>
+<body>
+    <h1>Perfume de Cuerda y Fuego</h1>
+
+    <div class="décima">
+        Tu aroma, dulce y <span class="highlight-1">sereno</span>,<br>
+        trae la calma que me <span class="highlight-2">abraza</span>,<br>
+        y aunque mi razón <span class="highlight-3">desplaza</span>,<br>
+        lo busco, pues soy su <span class="highlight-1">pleno</span>.<br>
+        Es un fuego puro y <span class="highlight-1">lleno</span><br>
+        que enciende mi alma <span class="highlight-4">cautiva</span>,<br>
+        me calma, pero me <span class="highlight-4">aviva</span><br>
+        si el deseo lo <span class="highlight-5">requiere</span>.<br>
+        Es tu esencia la que <span class="highlight-5">hiere</span>,<br>
+        y a la vez, quien me <span class="highlight-4">deriva</span>.<br>
+    </div>
+
+    <div class="décima">
+        Cada vez que el aire <span class="highlight-1">trae</span><br>
+        tu fragancia tan <span class="highlight-2">querida</span>,<br>
+        mi cordura es <span class="highlight-2">sostenida</span><br>
+        y mi ser entero <span class="highlight-3">estalla</span>.<br>
+        Es el roce de tu <span class="highlight-3">playa</span><br>
+        en mi pecho, que no <span class="highlight-5">miento</span>:<br>
+        te pienso con cada <span class="highlight-5">aliento</span>,<br>
+        te ansío en cada <span class="highlight-5">latido</span>.<br>
+        Tu perfume es el <span class="highlight-4">sentido</span><br>
+        que llena todo mi <span class="highlight-4">intento</span>.<br>
+    </div>
+
+    <div class="décima">
+        Espero siempre <span class="highlight-1">encontrarte</span><br>
+        y que el aire nos <span class="highlight-2">enlace</span>,<br>
+        que tu aroma nunca <span class="highlight-3">pase</span><br>
+        y logre siempre <span class="highlight-2">abrazarte</span>.<br>
+        Es un eco de tu <span class="highlight-4">parte</span>,<br>
+        el preludio de tu <span class="highlight-5">fuego</span>.<br>
+        De ti, mi esencia me <span class="highlight-4">entrego</span>,<br>
+        en cada dosis <span class="highlight-2">fragante</span>.<br>
+        Tu perfume, hilo <span class="highlight-1">constante</span>,<br>
+        es mi ancla, calma y <span class="highlight-3">juego</span>.<br>
+    </div>
+</body>
+</html>
 
