--- a/index.html
+++ b/index.html
@@ -66,16 +66,16 @@
     </div>
 
     <div id="decima1" class="décima">
-        Tu ausencia es un cruel tormento,<br>
-        tu perfume un eco perdido,<br>
-        tu voz, que al oído ha entrado,<br>
-        hace vibrar todo mi aliento.<br>
-        Te llevaste todo mi centro,<br>
-        mi corazón quedó en tus manos,<br>
-        extraño el calor de tus labios,<br>
-        la suavidad que en tu piel siento.<br>
-        Cada cicatriz, un momento,<br>
-        bajo mis manos, en tus brazos.<br>
+        Tu ausencia es un cruel <span class="highlight-1">tormento</span>,<br>
+        tu perfume un eco <span class="highlight-2">perdido</span>,<br>
+        tu voz, que al oído ha <span class="highlight-3">entrado</span>,<br>
+        hace vibrar todo mi <span class="highlight-4">aliento</span>.<br>
+        Te llevaste todo mi <span class="highlight-1">centro</span>,<br>
+        mi corazón quedó en tus <span class="highlight-2">manos</span>,<br>
+        extraño el calor de tus <span class="highlight-3">labios</span>,<br>
+        la suavidad que en tu piel <span class="highlight-4">siento</span>.<br>
+        Cada cicatriz, un <span class="highlight-5">momento</span>,<br>
+        bajo mis manos, en tus <span class="highlight-5">brazos</span>.<br>
     </div>
 
     <div id="decima2" class="décima">
