--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
         .highlight-3 { background-color: #8C6D11; padding: 2px 4px; border-radius: 3px; }
         .highlight-4 { background-color: #F2CBBD; padding: 2px 4px; border-radius: 3px; }
         .highlight-5 { background-color: #262626; padding: 2px 4px; color: #fff; border-radius: 3px; }
+        .highlight-6 { background-color: #642A2E; padding: 2px 4px; border-radius: 3px; }
+        .highlight-7 { background-color: #732735; padding: 2px 4px; border-radius: 3px; }
+        .highlight-8 { background-color: #A74844; padding: 2px 4px; border-radius: 3px; }
+        .highlight-9 { background-color: #EC9469; padding: 2px 4px; border-radius: 3px; }
+        .highlight-10 { background-color: #AB7E61; padding: 2px 4px; border-radius: 3px; }
     </style>
     <script>
         function showDecima(id) {
@@ -79,16 +84,16 @@
     </div>
 
     <div id="decima2" class="décima">
-        Tus manos pequeñas, entrelazadas,<br>
-        hacen del recuerdo un refugio,<br>
-        la luna, cómplice del murmullo,<br>
-        testigo de noches guardadas.<br>
-        Tu piel es luz, nunca olvidada,<br>
-        que al tocarla calma y arde,<br>
-        y aunque la distancia aguarde,<br>
-        mi deseo sigue presente.<br>
-        Eres el eco latente<br>
-        que mi memoria comparte.<br>
+        Tus manos pequeñas, <span class="highlight-6">entrelazadas</span>,<br>
+        hacen del recuerdo un <span class="highlight-7">refugio</span>,<br>
+        la luna, cómplice del <span class="highlight-8">murmullo</span>,<br>
+        testigo de noches <span class="highlight-9">guardadas</span>.<br>
+        Tu piel es luz, nunca <span class="highlight-9">olvidada</span>,<br>
+        que al tocarla calma y <span class="highlight-10">arde</span>,<br>
+        y aunque la distancia <span class="highlight-10">aguarde</span>,<br>
+        mi deseo sigue <span class="highlight-8">presente</span>.<br>
+        Eres el eco <span class="highlight-7">latente</span><br>
+        que mi memoria <span class="highlight-6">comparte</span>.<br>
     </div>
 </body>
 </html>
