--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
         .highlight-3 { background-color: #8C6D11; padding: 2px 4px; border-radius: 3px; }
         .highlight-4 { background-color: #F2CBBD; padding: 2px 4px; border-radius: 3px; }
         .highlight-5 { background-color: #262626; padding: 2px 4px; color: #fff; border-radius: 3px; }
-        .highlight-6 { background-color: #642A2E; padding: 2px 4px; border-radius: 3px; }
-        .highlight-7 { background-color: #732735; padding: 2px 4px; border-radius: 3px; }
-        .highlight-8 { background-color: #A74844; padding: 2px 4px; border-radius: 3px; }
-        .highlight-9 { background-color: #EC9469; padding: 2px 4px; border-radius: 3px; }
-        .highlight-10 { background-color: #AB7E61; padding: 2px 4px; border-radius: 3px; }
+        .highlight-6 { background-color: #642A2E; color: #fff; padding: 2px 4px; border-radius: 3px; }
+        .highlight-7 { background-color: #732735; color: #fff; padding: 2px 4px; border-radius: 3px; }
+        .highlight-8 { background-color: #A74844; color: #fff; padding: 2px 4px; border-radius: 3px; }
+        .highlight-9 { background-color: #EC9469; color: #fff; padding: 2px 4px; border-radius: 3px; }
+        .highlight-10 { background-color: #AB7E61; color: #fff; padding: 2px 4px; border-radius: 3px; }
     </style>
     <script>
         function showDecima(id) {
