--- a/index.html
+++ b/index.html
@@ -96,4 +96,5 @@
         que mi memoria <span class="highlight-6">comparte</span>.<br>
     </div>
 </body>
+<script src="sticker.min.js"></script>
 </html>
