--- a/index.html
+++ b/index.html
@@ -64,7 +64,12 @@
         .highlight-7 { background-color: #732735; color: #fff; padding: 2px 4px; border-radius: 3px; }
         .highlight-8 { background-color: #A74844; color: #fff; padding: 2px 4px; border-radius: 3px; }
         .highlight-9 { background-color: #EC9469; color: #fff; padding: 2px 4px; border-radius: 3px; }
-        .highlight-10 { background-color: #AB7E61; color: #fff; padding: 2px 4px; border-radius: 3px; }
+        .highlight-10 { background-color: #AB7E61; padding: 2px 4px; color: #fff; border-radius: 3px; }
+        .highlight-11 { background-color: #E3114E; padding: 2px 4px; color: #fff; border-radius: 3px; }
+        .highlight-12 { background-color: #B11F48; padding: 2px 4px; color: #fff; border-radius: 3px; }
+        .highlight-13 { background-color: #1E0000; padding: 2px 4px; color: #fff; border-radius: 3px; }
+        .highlight-14 { background-color: #801E2E; padding: 2px 4px; color: #fff; border-radius: 3px; }
+        .highlight-15 { background-color: #35030C; padding: 2px 4px; color: #fff; border-radius: 3px; }
     </style>
     <script>
         function showDecima(id) {
@@ -81,6 +86,7 @@
     <div class="menu">
         <button onclick="showDecima('decima1')">Primera Décima</button>
         <button onclick="showDecima('decima2')">Segunda Décima</button>
+        <button onclick="showDecima('decima3')">Tercera Décima</button>
     </div>
     <div class="stickers">
         <div class="sticker vi-sticker">
@@ -111,6 +117,42 @@
         Eres el eco <span class="highlight-7">latente</span><br>
         que mi memoria <span class="highlight-6">comparte</span>.<br>
     </div>
+
+    <div id="decima3" class="décima">
+        Si con mis actos hice <span class="highlight-11">insegura</span>,<br>
+        tu confianza y te hice <span class="highlight-12">dudar</span>,<br>
+        perdóname, no es mi <span class="highlight-13">afán</span>,<br>
+        eres mi norte y mi <span class="highlight-14">altura</span>.<br>
+        Tus emociones son la <span class="highlight-15">lluvia</span> pura,<br>
+        un río intenso y sin <span class="highlight-11">final</span>,<br>
+        pero también quieres tan <span class="highlight-12">real</span>,<br>
+        que llenas mi día de <span class="highlight-13">cordura</span>.<br>
+        No quiero que sientas <span class="highlight-14">fractura</span>,<br>
+        ni pensar que te haré <span class="highlight-15">mal</span>.<br>
+
+        No endurezcas tu <span class="highlight-12">corazón</span>,<br>
+        jamás repetiría tu <span class="highlight-13">pasado</span>,<br>
+        he escuchado lo que has <span class="highlight-14">hablado</span>,<br>
+        y guardo cada lección.<br>
+        Si tú eres la <span class="highlight-11">razón</span>,<br>
+        de que la felicidad <span class="highlight-15">exista</span>,<br>
+        nunca pienses que soy <span class="highlight-12">egoísta</span>,<br>
+        solo quiero construir algo <span class="highlight-13">agraciado</span>.<br>
+        Mostraste tu alma sin <span class="highlight-14">velo</span>,<br>
+        y mi verdad sigue <span class="highlight-15">clara</span>.<br>
+
+        Perdóname si en algo te <span class="highlight-11">fallé</span>,<br>
+        todo mi ser quiere <span class="highlight-12">luchar</span>,<br>
+        el futuro podemos <span class="highlight-13">forjar</span>,<br>
+        si en mí aún tienes <span class="highlight-14">fe</span>.<br>
+        No hay nada que no <span class="highlight-15">toqué</span>,<br>
+        que no lleve tu <span class="highlight-11">presencia</span>,<br>
+        por ti guardo la <span class="highlight-12">esencia</span>,<br>
+        de un camino por <span class="highlight-13">hacer</span>.<br>
+        No quiero verte <span class="highlight-14">perder</span>,<br>
+        por ti mantengo mi <span class="highlight-15">paciencia</span>.<br>
+    </div>
+    
 </body>
 <script type="text/javascript">
     window.onload = function() {
