--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             width: 180px;
             height: 180px;
             margin: 50px;
+            left: 70%;
         }
         .vi-sticker .sticker-img {
             background-image: url(./img/vi.png);
