--- a/index.html
+++ b/index.html
@@ -153,7 +153,8 @@
         No quiero verte <span class="highlight-14">perder</span>,<br>
         por ti mantengo mi <span class="highlight-15">paciencia</span>.<br>
         <br><br>
-        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/0y1LLH0NiwOD5tM3aNMXTr?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <iframe style="border-radius:12px;width: 50%;" src="https://open.spotify.com/embed/track/0y1LLH0NiwOD5tM3aNMXTr?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <p>Lee la letra, por favor :(</p>
     </div>
     
 </body>
