--- a/index.html
+++ b/index.html
@@ -71,6 +71,12 @@
         .highlight-13 { background-color: #1E0000; padding: 2px 4px; color: #fff; border-radius: 3px; }
         .highlight-14 { background-color: #801E2E; padding: 2px 4px; color: #fff; border-radius: 3px; }
         .highlight-15 { background-color: #35030C; padding: 2px 4px; color: #fff; border-radius: 3px; }
+        .highlight-16 { background-color: #DC3C74; padding: 2px 4px; color: #fff; border-radius: 3px; }
+        .highlight-17 { background-color: #F8DB10; padding: 2px 4px; color: #000; border-radius: 3px; }
+        .highlight-18 { background-color: #0394B6; padding: 2px 4px; color: #fff; border-radius: 3px; }
+        .highlight-19 { background-color: #EBD5DD; padding: 2px 4px; color: #000; border-radius: 3px; }
+        .highlight-20 { background-color: #E4BEA6; padding: 2px 4px; color: #000; border-radius: 3px; }
+        
     </style>
     <script>
         function showDecima(id) {
@@ -156,7 +162,40 @@
         <iframe style="border-radius:12px;width: 50%;" src="https://open.spotify.com/embed/track/0y1LLH0NiwOD5tM3aNMXTr?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         <p>Lee la letra, por favor :(</p>
     </div>
-    
+    <div id="decima4" class="décima">
+        En el último sábado del <span class="highlight-16">año</span>,<br>
+        volví a verte y no pude <span class="highlight-17">dudar</span>,<br>
+        mis labios buscaron sin <span class="highlight-18">temblar</span>,<br>
+        tus besos que siempre son un <span class="highlight-19">engaño</span>.<br>
+        Pero vi en tu rostro un <span class="highlight-20">extraño</span>,<br>
+        no era alegría, ni placer <span class="highlight-16">completo</span>,<br>
+        era tristeza, un gesto <span class="highlight-17">discreto</span>,<br>
+        que alerta a mi corazón sin <span class="highlight-18">tregua</span>.<br>
+        Bailamos, reímos sin pensar <span class="highlight-19">en nada</span>,<br>
+        valió la pena ir tan <span class="highlight-20">lejos</span>.<br>
+
+        Deseo que todos los sábados <span class="highlight-16">sean</span>,<br>
+        como aquel en que fuimos <span class="highlight-17">libres</span>,<br>
+        donde entre risas y besos me <span class="highlight-18">vives</span>,<br>
+        sin que el miedo a perdernos nos <span class="highlight-19">vean</span>.<br>
+        Llegó un momento en que sentí <span class="highlight-20">celos</span>,<br>
+        pero tú no lo notaste <span class="highlight-16">jamás</span>,<br>
+        quise que nadie más se te <span class="highlight-17">acercara</span>,<br>
+        aquel sábado eras mía sin <span class="highlight-18">velos</span>.<br>
+        Aunque cortamos la fiesta en <span class="highlight-19">mitad</span>,<br>
+        me llenaste el alma de <span class="highlight-20">paz</span>.<br>
+
+        Te pido nunca más me <span class="highlight-16">pidas</span>,<br>
+        que me aleje y deje de <span class="highlight-17">quererte</span>,<br>
+        sanar sola no es una <span class="highlight-18">posibilidad</span>,<br>
+        deja que cuide tus <span class="highlight-19">heridas</span>.<br>
+        Pondré agua tibia en las <span class="highlight-20">salidas</span>,<br>
+        y con una gasa de <span class="highlight-16">compresión</span>,<br>
+        limpiaré cada rincón del <span class="highlight-17">corazón</span>,<br>
+        porque te quiero sin <span class="highlight-18">medida</span>.<br>
+        Si tuviera siete vidas te <span class="highlight-19">diría</span>,<br>
+        que todas serían para estar <span class="highlight-20">contigo</span>.<br>
+    </div>
 </body>
 <script type="text/javascript">
     window.onload = function() {
