--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
         <button onclick="showDecima('decima1')">Primera Décima</button>
         <button onclick="showDecima('decima2')">Segunda Décima</button>
         <button onclick="showDecima('decima3')">Tercera Décima</button>
+        <button onclick="showDecima('decima4')">Cuarta Décima</button>
     </div>
     <div class="stickers">
         <div class="sticker vi-sticker">
